--- a/notebooks/0.2-cheston-melody-extraction-eval.ipynb
+++ b/notebooks/0.2-cheston-melody-extraction-eval.ipynb
@@ -162,13 +162,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T13:02:01.315641Z",
-     "start_time": "2026-02-18T13:00:08.429680Z"
+     "end_time": "2026-02-18T13:11:09.936449Z",
+     "start_time": "2026-02-18T13:09:20.828965Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "full_notes, hand_notes, auto_notes = 0, 0, 0\n",
+    "full_notes, hand_notes, auto_notes = [], [], []\n",
     "res = []\n",
     "\n",
     "for midi_path in full_midi_paths:\n",
@@ -177,21 +177,21 @@
     "        continue\n",
     "\n",
     "    full_midi = PrettyMIDI(str(midi_path))\n",
-    "    full_notes += len(full_midi.instruments[0].notes)\n",
+    "    full_notes.append(len(full_midi.instruments[0].notes))\n",
     "\n",
     "    # load up manual annotation melody\n",
     "    hand_annotated = str(midi_path.resolve()).replace(\"_full\", \"_manual\")\n",
     "    hand_annotated_midi = RollExtractor(PrettyMIDI(str(hand_annotated)))\n",
     "    hand_annotated_note_list = [(i.start, i.pitch) for i in hand_annotated_midi.output_midi.instruments[0].notes]\n",
     "\n",
-    "    hand_notes += len(hand_annotated_note_list)\n",
+    "    hand_notes.append(len(hand_annotated_note_list))\n",
     "\n",
     "    # compute automatically extracted melody\n",
     "    auto_extracted_midi = proc(midi_path)\n",
     "    auto_extracted_note_list = [(i.start, i.pitch) for i in auto_extracted_midi.skylined.instruments[0].notes]\n",
     "\n",
     "    total_auto_notes = len(auto_extracted_note_list)\n",
-    "    auto_notes += total_auto_notes\n",
+    "    auto_notes.append(total_auto_notes)\n",
     "\n",
     "    # iterate over all manual annotation melody notes\n",
     "    hits = 0\n",
@@ -218,10 +218,13 @@
     "            rp.create_plot()\n",
     "            rp.save_fig()\n",
     "\n",
-    "print(\"Mean error rate: \", np.mean(res) * 100)\n",
-    "print(\"Total full MIDI notes: \", full_notes)\n",
-    "print(\"Total hand-annotated notes: \", hand_notes)\n",
-    "print(\"Total automatically extracted notes: \", auto_notes)"
+    "print(\"Mean error rate: \", np.mean(res) * 100, np.std(res) * 100)\n",
+    "print(\"Total full MIDI notes: \", np.sum(full_notes))\n",
+    "print(\"Mean full MIDI notes\", np.mean(full_notes), np.std(full_notes))\n",
+    "print(\"Total hand-annotated notes: \", np.sum(hand_notes))\n",
+    "print(\"Mean hand-annotated notes\", np.mean(hand_notes), np.std(hand_notes))\n",
+    "print(\"Total automatically extracted notes: \", np.sum(auto_notes))\n",
+    "print(\"Mean automatically extracted notes\", np.mean(auto_notes), np.std(auto_notes))"
    ],
    "id": "402d0c3830a1d15f",
    "outputs": [
@@ -285,20 +288,15 @@
      "text": [
       "Mean error rate:  11.878750848159443\n",
       "Total full MIDI notes:  3544\n",
+      "Mean full MIDI notes 506.2857142857143 175.7430870704769\n",
       "Total hand-annotated notes:  1017\n",
-      "Total automatically extracted notes:  1042\n"
+      "Mean hand-annotated notes 145.28571428571428 71.12908644693469\n",
+      "Total automatically extracted notes:  1042\n",
+      "Mean automatically extracted notes 148.85714285714286 60.880277292940335\n"
      ]
     }
    ],
-   "execution_count": 70
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9219d49baf0aa795"
+   "execution_count": 71
   }
  ],
  "metadata": {
